feat: implement backend integration for match functionality
- Add expo-secure-store for token management
- Create ApiService for HTTP requests and authentication
- Implement MatchService with full API integration
- Update screens to use real backend data instead of mocks
- Add login screen with authentication flow
- Update registration to use backend API
- Add error handling and loading states
- Document API endpoints and application structure

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -16,7 +16,22 @@
     "age": "Age",
     "instagram": "Instagram (User or Link)",
     "whatsapp": "WhatsApp (Optional)",
-    "start": "Get Started"
+    "start": "Get Started",
+    "error": "Registration Error",
+    "errorDesc": "Could not create user. Please try again.",
+    "hasAccount": "Already have an account?",
+    "login": "Login"
+  },
+  "login": {
+    "welcomeBack": "Welcome Back!",
+    "subtitle": "Login to continue",
+    "login": "Login",
+    "noAccount": "Don't have an account?",
+    "register": "Register",
+    "missingData": "Missing data",
+    "missingDataDesc": "Please enter email and password",
+    "error": "Login Error",
+    "errorDesc": "Invalid credentials"
   },
   "matches": {
     "noDescription": "No description",
