feat(register): implement multi-step form with navigation
- Add "Next" and "Back" translations for both English and Spanish
- Split registration form into two steps with state management
- Add navigation buttons between form steps
- Update form styling to accommodate new layout

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -3,6 +3,8 @@
     "ok": "OK",
     "cancel": "Cancel",
     "save": "Save",
+    "next": "Next",
+    "back": "Back",
     "success": "Success",
     "error": "Error"
   },
