--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -3,6 +3,8 @@
     "ok": "OK",
     "cancel": "Cancelar",
     "save": "Guardar",
+    "next": "Siguiente",
+    "back": "Atrás",
     "success": "Éxito",
     "error": "Error"
   },
