feat(register): add gender, interested in and description fields
Add new registration fields for gender selection, interested in preferences and user description. Includes translations for both English and Spanish locales. Update form validation to require these fields in step 2 of the registration process.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -18,6 +18,13 @@
     "age": "Age",
     "instagram": "Instagram (User or Link)",
     "whatsapp": "WhatsApp (Optional)",
+    "gender": "Gender",
+    "male": "Male",
+    "female": "Female",
+    "other": "Other",
+    "interestedIn": "Interested in",
+    "description": "Description",
+    "descriptionPlaceholder": "Tell us about yourself...",
     "start": "Get Started",
     "error": "Registration Error",
     "errorDesc": "Could not create user. Please try again.",
