--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -18,6 +18,13 @@
     "age": "Edad",
     "instagram": "Instagram (Usuario o Link)",
     "whatsapp": "WhatsApp (Opcional)",
+    "gender": "Género",
+    "male": "Hombre",
+    "female": "Mujer",
+    "other": "Otro",
+    "interestedIn": "Interesado en",
+    "description": "Descripción",
+    "descriptionPlaceholder": "Cuéntanos sobre ti...",
     "start": "Comenzar",
     "error": "Error de Registro",
     "errorDesc": "No se pudo crear el usuario. Por favor intenta de nuevo.",
