feat(register): improve multi-step registration flow with validation
- Add step progress indicator and titles for each registration step
- Implement separate validation functions for each registration step
- Add required field validation messages for all input fields
- Enhance UI with social media icons and information boxes
- Update translations for new registration flow elements

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -13,6 +13,14 @@
     "missingDataDesc": "Please complete your name, age, instagram and photo.",
     "createAccount": "Create Account",
     "subtitle": "Start meeting new people!",
+    "step": "Step",
+    "of": "of",
+    "step1Title": "Basic Information",
+    "step1Subtitle": "Let's start with the basics",
+    "step2Title": "Your Profile",
+    "step2Subtitle": "Tell us more about yourself",
+    "step3Title": "Connect Your Socials",
+    "step3Subtitle": "How can others reach you?",
     "addPhoto": "Add Photo",
     "name": "Name",
     "age": "Age",
@@ -25,9 +33,17 @@
     "interestedIn": "Interested in",
     "description": "Description",
     "descriptionPlaceholder": "Tell us about yourself...",
-    "start": "Get Started",
-    "error": "Registration Error",
+    "socialInfo": "Your Instagram is required to connect with matches. WhatsApp is optional but recommended.",
+    "start": "Complete Registration",
+    "error": "Error",
     "errorDesc": "Could not create user. Please try again.",
+    "nameRequired": "Please enter your name",
+    "emailRequired": "Please enter a valid email",
+    "passwordRequired": "Password must be at least 6 characters",
+    "photoRequired": "Please add a profile photo",
+    "ageRequired": "Please enter your age (18-99)",
+    "descriptionRequired": "Please write a description (at least 10 characters)",
+    "instagramRequired": "Please enter your Instagram username or link",
     "hasAccount": "Already have an account?",
     "login": "Login"
   },
