--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -13,6 +13,14 @@
     "missingDataDesc": "Por favor completa tu nombre, edad, instagram y foto.",
     "createAccount": "Crear Cuenta",
     "subtitle": "¡Empieza a conocer gente nueva!",
+    "step": "Paso",
+    "of": "de",
+    "step1Title": "Información Básica",
+    "step1Subtitle": "Empecemos con lo básico",
+    "step2Title": "Tu Perfil",
+    "step2Subtitle": "Cuéntanos más sobre ti",
+    "step3Title": "Conecta tus Redes",
+    "step3Subtitle": "¿Cómo pueden contactarte?",
     "addPhoto": "Agregar Foto",
     "name": "Nombre",
     "age": "Edad",
@@ -25,9 +33,17 @@
     "interestedIn": "Interesado en",
     "description": "Descripción",
     "descriptionPlaceholder": "Cuéntanos sobre ti...",
-    "start": "Comenzar",
-    "error": "Error de Registro",
+    "socialInfo": "Tu Instagram es requerido para conectar con tus matches. WhatsApp es opcional pero recomendado.",
+    "start": "Completar Registro",
+    "error": "Error",
     "errorDesc": "No se pudo crear el usuario. Por favor intenta de nuevo.",
+    "nameRequired": "Por favor ingresa tu nombre",
+    "emailRequired": "Por favor ingresa un email válido",
+    "passwordRequired": "La contraseña debe tener al menos 6 caracteres",
+    "photoRequired": "Por favor agrega una foto de perfil",
+    "ageRequired": "Por favor ingresa tu edad (18-99)",
+    "descriptionRequired": "Por favor escribe una descripción (al menos 10 caracteres)",
+    "instagramRequired": "Por favor ingresa tu usuario o link de Instagram",
     "hasAccount": "¿Ya tienes una cuenta?",
     "login": "Ingresa aquí"
   },
