feat(matches): enhance empty state UI with new design and navigation
Add new empty state design for matches screen with icon, title, subtitle, and explore button. Include translations for English and Spanish. The explore button navigates to swipe screen when pressed.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -61,7 +61,10 @@
   "matches": {
     "noDescription": "No description",
     "title": "Your Matches",
-    "subtitle": "People who liked you"
+    "subtitle": "People who liked you",
+    "noMatchesTitle": "No Matches Yet",
+    "noMatchesSubtitle": "Start exploring to find people nearby.",
+    "exploreButton": "Start Swiping"
   },
   "profile": {
     "contactInfo": "Contact Information",
